<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="action_camera">Camera</string>
    <string name="action_go_deeper">go deeper</string>
    <string name="action_login">login</string>
    <string name="action_settings">Settings</string>

    <string name="app_name">NavControllerDemo</string>

    <string name="benefits_faq_link_how_do_i_get_url">https://www.rewe.de/service/faq-app-gutscheine?app=true</string>

    <string name="deeplink_prefix">deeplink data:\n%1$s</string>

    <string name="empty_content_description" />

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hint_password">password</string>
    <string name="hint_username">username</string>

    <string name="imageTransition">full_image</string>

    <string name="login_error_prompt">This should not be empty</string>

    <string name="title_camera">Camera</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_deeplink">Deeplink</string>
    <string name="title_dynamic_feature">Dynamic Feature</string>
    <string name="title_extra">Extra</string>
    <string name="title_first">First</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_second">Second</string>
    <string name="title_settings">Settings</string>
    <string name="title_slideshow">Slideshow</string>
</resources>
