<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_dynamic"
    app:startDestination="@id/dest_camera">

    <fragment
        android:id="@+id/dest_camera"
        android:name="app.bosse.navcontroller.demo.camera.fragments.CameraFragment"
        android:label="Camera"
        tools:layout="@layout/fragment_camera">
        <action
            android:id="@+id/go_to_settings"
            app:destination="@id/dest_settings"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <deepLink app:uri="www.bosse.app/navcontroller/camera/" />
    </fragment>

    <fragment
        android:id="@+id/dest_gallery"
        android:name="app.bosse.navcontroller.demo.camera.fragments.GalleryFragment"
        android:label="@string/title_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/dest_slideshow"
        android:name="app.bosse.navcontroller.demo.camera.fragments.SlideshowFragment"
        android:label="@string/title_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/dest_settings"
        android:name="app.bosse.navcontroller.demo.camera.fragments.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>